--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Deleniti recusandae perspiciatis eveniet.</p>
             <div class="icons">
                 <a href = "https://anilist.co/user/Kyokino/"><img src = "images/ANILIST.png"></a>
-                <a href = "https://i.imgur.com/TyPSTwb.png"><img src = "images/DISCORD.png"></a>
+                <a href = "https://i.imgur.com/umEgQPx.png"><img src = "images/DISCORD.png"></a>
                 <a href = "https://github.com/Spelljinxer"><img src = "images/github.png"></a>
             </div>
         </section>
