Replaced all lorem ipsum

--- a/index.html
+++ b/index.html
@@ -20,58 +20,57 @@
                     <ul>
                         <li><a href = "./index.html">HOME</a></li>
                         <li><a href = "./about.html">ABOUT</a></li>
-                        <li><a href = "">FEET PICS</a></li>
+                        <li><a href = "./pics.html">FEET PICS</a></li>
                         <li><a href = "">BUILDS</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick = "showMenu()"></i>
             </nav>
     <div class="text-box">
-            <h1>A website developed by Spelljinxer</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h1>Ganyu</h1>
+            <p>Everything Ganyu Related!<br>- Developed by Spelljinxer -</p>
             <a href="" class="hero-btn">Welcome!</a>
     </div>
         </section>
         <!--- About Section --->
         <section class ="about">
             <h1>About</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Drink only spring water, eat only whole grain. Proceed with elegance, avoid certain peril.</p>
             <div class = "row">
                 <div class="about-col">
-                    <h3><b></b>Who?<b></b></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quos cupiditate cum atque</p>
+                    <h3><b></b>Details<b></b></h3>
+                    <p>Height: 5'1" (156cm)<br> Age: Over 3000 <br> Birthday: December 2</p>
                 </div>
                 <div class="about-col">
-                    <h3><b></b>What?<b></b></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quos cupiditate cum atque</p>
+                    <h3><b></b>Vision<b></b></h3>
+                    <p>Cryo Vision granted after becoming the secretary of the Liyue Qixing</p>
                 </div>
                 <div class="about-col">
-                    <h3><b></b>Why?<b></b></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quos cupiditate cum atque</p>
+                    <h3><b></b>Weapon<b></b></h3>
+                    <p>Amos Bow <br>It draws power from everyone and everything in the world, and the further away you are from that which your heart desires, the more powerful it is.</p>
                 </div>
             </div>
         </section>
 
-        <!--- Campus --->
 
-        <section class ="feet">
-            <h1> Keep Scrolling</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quos cupiditate cum atque</p>
+        <section class ="more">
+            <h1>Half-Qilin Adepti</h1>
+            <p>The blood of both human and illuminated beast flows within her veins.</p>
 
             <div class="row">
-                <div class="feet-col">
+                <div class="more-col">
                     <img src = "images/ganyu1.png">
                     <div class="layer">
                         <h3>Qilin's Prance</h3>
                     </div>
                 </div>
-                <div class="feet-col">
+                <div class="more-col">
                     <img src = "images/ganyu2.png">
                     <div class="layer">
                         <h3>Glaze Over</h3>
                     </div>
                 </div>
-                <div class="feet-col">
+                <div class="more-col">
                     <img src = "images/ganyu3.png">
                     <div class="layer">
                         <h3>Ice and Frost</h3>
@@ -82,23 +81,23 @@
 
         <!---  Another Section --->
         <section class="another">
-            <h1>Honestly, i am so bored</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quos cupiditate cum atque</p>
+            <h1>Liyue Qixing</h1>
+            <p>Graceful and quiet by nature, yet the gentle disposition of qilin sees not even the slightest conflict with even the most arduous of workloads.</p>
             <div class="row">
                 <div class="another-col">
-                    <img src = "images/end.jpg">
-                    <h3>Placeholder 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis</p>
+                    <img id = "img" src = "images/end1.png">
+                    <!-- <h3>Placeholder 1</h3> -->
+                    <p>The blood of the qilin, an illuminated beast, flows within her veins.</p>
                 </div>
                 <div class="another-col">
-                    <img src = "images/end.jpg">
-                    <h3>Placeholder 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis</p>
+                    <img id = "img" src = "images/end2.png">
+                    <!-- <h3>Placeholder 2</h3> -->
+                    <p>It is said that the qilin carry an auspicious grace, yet who knows of the loneliness of a benevolent being among the sea of people?</p>
                 </div>
                 <div class="another-col">
-                    <img src = "images/end.jpg">
-                    <h3>Placeholder 3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis</p>
+                    <img id = "img" src = "images/end3.png">
+                    <!-- <h3>Placeholder 3</h3> -->
+                    <p>How short is a thousand years? To Ganyu, it has felt shorter than the blink of an eye.</p>
                 </div>
             </div>
 
@@ -108,20 +107,20 @@
 
         <section class = "quotes">
             <h1>Quotes</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis</p>
+            <p> Beautiful treasures are a cause for great happiness.</p>
 
             <div class="row">
                 <div class="quotes-col">
                     <img src = "images/icon1.png">
                     <div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit in ut unde dolorem iste atque eveniet blanditiis?</p>
+                        <p>Look how brightly lit the city is at night! Amazing. I wonder what it's like for all the people down there... Hmm? Umm... No thanks, I think I'll pass on the night market. Sorry...</p>
                         <h3>甘雨</h3>
                     </div>>
                 </div>
                 <div class="quotes-col">
                     <img src = "images/icon2.png">
                     <div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit in ut unde dolorem iste atque eveniet blanditiis?</p>
+                        <p> I want to understand more about humans... And I especially wish to hear what you think of them. Why, you ask? Because you're... you're a bit different from most people in Teyvat, just as I am... please, tell me what you think.</p>
                         <h3>Sweet Rain</h3>
                     </div>>
                 </div>
@@ -130,13 +129,13 @@
 
         <!--- Final button --->
         <section class="button">
-            <h1>Lorem Ipsum Title</h1>
-            <a href ="" class="hero-btn">BUTTON 1</a>
+            <h1>Theme</h1>
+            <a href ="https://www.youtube.com/watch?v=vV7OmRpgXh4" target = "_blank" class="hero-btn">QILIN'S PRANCE</a>
         </section>
 
         <section class="footer">
             <h4>Spelljinxer</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Deleniti recusandae perspiciatis eveniet.</p>
+            <p>The page and all the code are the sole property of Spelljinxer. However, I do not own the rights to any of the images listed on this site. <br> All images and artworks belong to their respective owners.</p>
             <div class="icons">
                 <a href = "https://anilist.co/user/Kyokino/"><img src = "images/ANILIST.png"></a>
                 <a href = "https://i.imgur.com/umEgQPx.png"><img src = "images/DISCORD.png"></a>
@@ -156,6 +155,8 @@
                 function hideMenu() {
                     navLinks.style.right = "-200px";
                 }
+
+                
             </script>
 
     </body>
