added more quotes

--- a/index.html
+++ b/index.html
@@ -111,17 +111,34 @@
 
             <div class="row">
                 <div class="quotes-col">
-                    <img src = "images/icon1.png">
+                    <img src = "images/icons/icon1.png">
                     <div>
                         <p>Look how brightly lit the city is at night! Amazing. I wonder what it's like for all the people down there... Hmm? Umm... No thanks, I think I'll pass on the night market. Sorry...</p>
-                        <h3>甘雨</h3>
+                        <h3>晚上好</h3>
                     </div>>
                 </div>
                 <div class="quotes-col">
-                    <img src = "images/icon2.png">
+                    <img src = "images/icons/icon2.png">
+                    <div>
+                        <p>Ah, I love the smell of Glaze Lilies.</p>
+                        <h3>多风的</h3>
+                    </div>>
+                </div>
+            </div>
+
+            <div class="row-2">
+                <div class="quotes-col">
+                    <img src = "images/icons/icon3.png">
+                    <div>
+                        <p> It is something of a luxury, but I love listening to the rain from the courtyard.</p>
+                        <h3>雨</h3>
+                    </div>>
+                </div>
+                <div class="quotes-col">
+                    <img src = "images/icons/icon4.png">
                     <div>
                         <p> I want to understand more about humans... And I especially wish to hear what you think of them. Why, you ask? Because you're... you're a bit different from most people in Teyvat, just as I am... please, tell me what you think.</p>
-                        <h3>Sweet Rain</h3>
+                        <h3>要求</h3>
                     </div>>
                 </div>
             </div>
@@ -137,9 +154,9 @@
             <h4>Spelljinxer</h4>
             <p>The page and all the code are the sole property of Spelljinxer. However, I do not own the rights to any of the images listed on this site. <br> All images and artworks belong to their respective owners.</p>
             <div class="icons">
-                <a href = "https://anilist.co/user/Kyokino/"><img src = "images/ANILIST.png"></a>
-                <a href = "https://i.imgur.com/umEgQPx.png"><img src = "images/DISCORD.png"></a>
-                <a href = "https://github.com/Spelljinxer"><img src = "images/github.png"></a>
+                <a href = "https://anilist.co/user/Kyokino/" target = "_blank"><img src = "images/socials/ANILIST.png"></a>
+                <a href = "https://i.imgur.com/umEgQPx.png" target = "_blank"><img src = "images/socials/DISCORD.png"></a>
+                <a href = "https://github.com/Spelljinxer" target = "_blank"><img src = "images/socials/github.png"></a>
             </div>
         </section>
 
