--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
                 <div class="quotes-col">
                     <img src = "images/icons/icon1.png">
                     <div>
-                        <p>Look how brightly lit the city is at night! Amazing. I wonder what it's like for all the people down there... Hmm? Umm... No thanks, I think I'll pass on the night market. Sorry...</p>
+                        <p>"Look how brightly lit the city is at night! Amazing. I wonder what it's like for all the people down there... Hmm? Umm... No thanks, I think I'll pass on the night market. Sorry..."</p>
                         <h3>晚上好</h3>
                     </div>>
                 </div>
                 <div class="quotes-col">
                     <img src = "images/icons/icon2.png">
                     <div>
-                        <p>Ah, I love the smell of Glaze Lilies.</p>
+                        <p>"Ah, I love the smell of Glaze Lilies."</p>
                         <h3>多风的</h3>
                     </div>>
                 </div>
@@ -130,14 +130,14 @@
                 <div class="quotes-col">
                     <img src = "images/icons/icon3.png">
                     <div>
-                        <p> It is something of a luxury, but I love listening to the rain from the courtyard.</p>
+                        <p>"It is something of a luxury, but I love listening to the rain from the courtyard."</p>
                         <h3>雨</h3>
                     </div>>
                 </div>
                 <div class="quotes-col">
                     <img src = "images/icons/icon4.png">
                     <div>
-                        <p> I want to understand more about humans... And I especially wish to hear what you think of them. Why, you ask? Because you're... you're a bit different from most people in Teyvat, just as I am... please, tell me what you think.</p>
+                        <p>"I want to understand more about humans... And I especially wish to hear what you think of them. Why, you ask? Because you're... you're a bit different from most people in Teyvat, just as I am... please, tell me what you think."</p>
                         <h3>要求</h3>
                     </div>>
                 </div>
