--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             
         </section>
-        <!--Test-->
+        <!--quotes-->
 
         <section class = "quotes">
             <h1>Quotes</h1>
