--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class = "row">
                 <div class="about-col">
                     <h3><b></b>Details<b></b></h3>
-                    <p>Height: 5'1" (156cm)<br> Age: Over 3000 <br> Birthday: December 2</p>
+                    <p>Height: 5'1" (156cm)<br> Age: Over 3000 <br> Birthday: December 2 <br> Astrolabe: Sinae Unicornis <br> Rarity: 5 Stars</p>
                 </div>
                 <div class="about-col">
                     <h3><b></b>Vision<b></b></h3>
@@ -149,6 +149,9 @@
             <h1>Theme</h1>
             <a href ="https://www.youtube.com/watch?v=vV7OmRpgXh4" target = "_blank" class="hero-btn">QILIN'S PRANCE</a>
         </section>
+
+
+        <!-------------------------------------------FOOTER------------------------------------------------------------------------->
 
         <section class="footer">
             <h4>Spelljinxer</h4>
