--- a/pics.html
+++ b/pics.html
@@ -35,15 +35,15 @@
         <section class="feet-list">
             <div class="row">
                 <div class="feet-list-col">
-                    <img src = "images/feet1.jpg">
+                    <img src = "images/feet/feet1.jpg">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet2.png">
+                    <img src = "images/feet/feet2.png">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet3.png">
+                    <img src = "images/feet/feet3.png">
                 </div>
 
                 
@@ -51,77 +51,81 @@
 
             <div class="row">
                 <div class="feet-list-col">
-                    <img src = "images/feet4.png">
+                    <img src = "images/feet/feet4.png">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet5.png">
+                    <img src = "images/feet/feet5.png">
                 </div>
                 <div class="feet-list-col">
-                    <img src = "images/feet6.png">
+                    <img src = "images/feet/feet6.png">
                 </div>
             </div>
 
             <div class="row">
                 <div class="feet-list-col">
-                    <img src = "images/feet7.png">
+                    <img src = "images/feet/feet7.png">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet8.png">
+                    <img src = "images/feet/feet8.png">
                 </div>
                 <div class="feet-list-col">
-                    <img src = "images/feet9.png">
+                    <img src = "images/feet/feet9.png">
                 </div>
             </div>
 
             <div class="row">
                 <div class="feet-list-col">
-                    <img src = "images/feet10.png">
+                    <img src = "images/feet/feet10.png">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet11.png">
+                    <img src = "images/feet/feet11.png">
                 </div>
                 <div class="feet-list-col">
-                    <img src = "images/feet12.png">
+                    <img src = "images/feet/feet12.png">
                 </div>
             </div>
 
             <div class="row">
                 <div class="feet-list-col">
-                    <img src = "images/feet13.png">
+                    <img src = "images/feet/feet13.png">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet14.png">
+                    <img src = "images/feet/feet14.png">
                 </div>
                 <div class="feet-list-col">
-                    <img src = "images/feet15.png">
+                    <img src = "images/feet/feet15.png">
                 </div>
             </div>
 
             <div class="row">
                 <div class="feet-list-col">
-                    <img src = "images/feet16.png">
+                    <img src = "images/feet/feet16.png">
                 </div>
 
                 <div class="feet-list-col">
-                    <img src = "images/feet17.png">
+                    <img src = "images/feet/feet17.png">
                 </div>
                 <div class="feet-list-col">
-                    <img src = "images/feet18.png">
+                    <img src = "images/feet/feet18.png">
                 </div>
             </div>
         </section>
+
+
+
+        <!-------------------------------------------FOOTER------------------------------------------------------------------------->
     
         <section class="footer">
             <h4>Spelljinxer</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Deleniti recusandae perspiciatis eveniet.</p>
             <div class="icons">
-                <a href = "https://anilist.co/user/Kyokino/"><img src = "images/ANILIST.png"></a>
-                <a href = "https://i.imgur.com/umEgQPx.png"><img src = "images/DISCORD.png"></a>
-                <a href = "https://github.com/Spelljinxer"><img src = "images/github.png"></a>
+                <a href = "https://anilist.co/user/Kyokino/" target = "_blank"><img src = "images/socials/ANILIST.png"></a>
+                <a href = "https://i.imgur.com/umEgQPx.png" target = "_blank"><img src = "images/socials/DISCORD.png"></a>
+                <a href = "https://github.com/Spelljinxer" target = "_blank"><img src = "images/socials/github.png"></a>
             </div>
         </section>
 
