--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                     <ul>
                         <li><a href = "./index.html">HOME</a></li>
                         <li><a href = "./about.html">ABOUT</a></li>
-                        <li><a href = "">FEET PICS</a></li>
+                        <li><a href = "./pics.html">FEET PICS</a></li>
                         <li><a href = "">BUILDS</a></li>
                     </ul>
                 </div>
@@ -33,9 +33,17 @@
         <section class="about-ganyu">
             <div class="row">
                 <div class="about-ganyu-col">
-                    <h1>Plenilune Glaze</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente magni officiis quae, doloribus voluptatum exercitationem porro laborum modi.</p>
-                    <a href = "" class = "hero-btn blue-btn">BUTTON 1</a>
+                    <h1>Appearance</h1>
+                    <p>A half-human, half-adeptus hybrid. She is a young woman with pale blue hair, fading into a darker shade at the end.
+                        Her hair is styled in a layered, chin-length cut with two shoulder-length locks in front and the back section left long.
+                        <br><br>
+                        Though she mostly resembles a human, she has black-red horns that bend back along her hair, similar to how a goat's horns look, with brighter red markings on them. Many people confuse it as a headdress, a misconception that Ganyu actively encourages. 
+                        She has purple multicolored heterochromatic eyes that fade into pink then gold.
+                        <br><br>
+                        Her outfit consists of a black bodysuit with gold accents on the legs underneath a white and purple bodice with long ends similar to a tailcoat, with a separated pair of sleeves to match. The bodysuit meets at the back of her neck to make a bow.
+                        She has white heels with gold accents and gray bottoms, with red knots around her ankles.
+                    </p>
+                    <a href = "" target = "_blank" class = "hero-btn blue-btn" >BUTTON 1</a>
                 </div>
                 <div class="about-ganyu-col">
                     <img src = "images/about2.png">
@@ -43,13 +51,29 @@
             </div>
         </section>
 
+        <section class="about-ganyu">
+            <div class="row">
+                <div class="about-ganyu-col">
+                    <img src = "images/gifs/ult.gif">
+                </div>
+                <div class="about-ganyu-col">
+                    <h1>Plenilune Glaze</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente magni officiis quae, doloribus voluptatum exercitationem porro laborum modi.</p>
+                    <a href = "" target = "_blank" class = "hero-btn blue-btn">BUTTON 1</a>
+                </div>
+            </div>
+        </section>
+
+
+        <!-------------------------------------------FOOTER------------------------------------------------------------------------->
+
         <section class="footer">
             <h4>Spelljinxer</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Deleniti recusandae perspiciatis eveniet.</p>
             <div class="icons">
-                <a href = "https://anilist.co/user/Kyokino/"><img src = "images/ANILIST.png"></a>
-                <a href = "https://i.imgur.com/TyPSTwb.png"><img src = "images/DISCORD.png"></a>
-                <a href = "https://github.com/Spelljinxer"><img src = "images/github.png"></a>
+                <a href = "https://anilist.co/user/Kyokino/" target = "_blank"><img src = "images/socials/ANILIST.png"></a>
+                <a href = "https://i.imgur.com/TyPSTwb.png" target = "_blank"><img src = "images/socials/DISCORD.png"></a>
+                <a href = "https://github.com/Spelljinxer" target = "_blank"><img src = "images/socials/github.png"></a>
             </div>
         </section>
 
