--- a/pics.html
+++ b/pics.html
@@ -135,7 +135,7 @@
     
         <section class="footer">
             <h4>Spelljinxer</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Deleniti recusandae perspiciatis eveniet.</p>
+            <p>The page and all the code are the sole property of Spelljinxer. However, I do not own the rights to any of the images listed on this site. <br> All images and artworks belong to their respective owners.</p>
             <div class="icons">
                 <a href = "https://anilist.co/user/Kyokino/" target = "_blank"><img src = "images/socials/ANILIST.png"></a>
                 <a href = "https://i.imgur.com/umEgQPx.png" target = "_blank"><img src = "images/socials/DISCORD.png"></a>
