fixed footers + added more about details

--- a/about.html
+++ b/about.html
@@ -71,9 +71,38 @@
                     <img src = "images/gifs/ult.gif">
                 </div>
                 <div class="about-ganyu-col">
-                    <h1>Plenilune Glaze</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente magni officiis quae, doloribus voluptatum exercitationem porro laborum modi.</p>
+                    <h1>Personality</h1>
+                    <p>Ganyu is usually very quiet and reserved due to her half-qilin heritage.
+                        She also completes whatever is given to her, whether it be tasks or food, even if she is reluctant to do so.
+                        <br><br>
+                        Ganyu has served as the non-stopping secretary of the Liyue Qixing for thousands of years. 
+                        The more important the task is, the more effort she puts into it, but she also becomes increasingly nervous and is more prone to making mistakes
+                    </p>
                     <a href = "" target = "_blank" class = "hero-btn blue-btn">BUTTON 1</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-ganyu">
+            <div class="row">
+                <div class="about-ganyu-col">
+                    <h1>Amos' Bow</h1>
+                    <p>An extremely ancient bow that has retained its power despite its original master being long gone. 
+                        It draws power from everyone and everything in the world, and the further away you are from that which your heart desires, the more powerful it is.
+                        <br><br>
+                        Base Attack (Level 1 - 90) : 46 - 608
+                        <br>
+                        Ascension Stat (Level 1 - 90): 10.8% - 49.6%;
+                        <br>
+                        Rarity: 5 Stars
+                        <br>
+                        Weapon Effect: Increases Normal Attack and Charged Attack DMG by 12%/15%/18%/21%/24% (Refinements).
+                        After a Normal or Charged Attack is fired, DMG dealt increases by a further 8%/10%/12%/14%/16% (Refinement) every 0.1 seconds the arrow is in the air for up to 5 times.
+                    </p>
+                    <a href = "" target = "_blank" class = "hero-btn blue-btn" >BUTTON 1</a>
+                </div>
+                <div class="about-ganyu-col">
+                    <img src = "images/gifs/amos1.gif">
                 </div>
             </div>
         </section>
@@ -83,7 +112,7 @@
 
         <section class="footer">
             <h4>Spelljinxer</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Deleniti recusandae perspiciatis eveniet.</p>
+            <p>The page and all the code are the sole property of Spelljinxer. However, I do not own the rights to any of the images listed on this site. <br> All images and artworks belong to their respective owners.</p>
             <div class="icons">
                 <a href = "https://anilist.co/user/Kyokino/" target = "_blank"><img src = "images/socials/ANILIST.png"></a>
                 <a href = "https://i.imgur.com/TyPSTwb.png" target = "_blank"><img src = "images/socials/DISCORD.png"></a>
