--- a/about.html
+++ b/about.html
@@ -107,6 +107,60 @@
             </div>
         </section>
 
+        <section class ="abilities">
+            <h1>Abilities</h1>
+            <div class = "row">
+                <div class="abilities-col">
+                    <h3>Liutian Archery</h3>
+                    <img src = "images/about/abi1.png">
+                    <h5>Normal Attack</h5>
+                    <p>
+                        Perform up to 6 consecutive shots with a bow. </p>
+                    <br>
+                    <h5>Charged Attack</h5>
+                    <br>
+                    <p>
+                        Perform a more precise Aimed Shot with increased DMG.
+                        While aiming, an icy aura will accumulate on the arrowhead before the arrow is fired. Has different effects based on how long the energy has been charged:<br>
+                        Charge Level 1: Fires off an icy arrow that deals Cryo DMG.<br>
+                        Charge Level 2: Fires off a Frostflake Arrow that deals Cryo DMG. The Frostflake Arrow blooms after hitting its target, dealing AoE Cryo DMG.</p>
+                    <br>
+                    <h5>Plunging Attack</h5>
+                    <br>
+                    <p>
+                        Fires off a shower of arrows in mid-air before falling and striking the ground, dealing AoE DMG upon impact.
+                    </p>
+                </div>
+
+
+                <div class="abilities-col">
+                    <h3>Trail of the Qilin</h3>
+                    <img src = "images/about/abi2.png">
+                    <p>
+                        Fires off a shower of arrows in mid-air before falling and striking the ground, dealing AoE DMG upon impact.
+                    </p>
+                    <br>
+                    <h5>Ice Lotus</h5>
+                    <br>
+                    <p>
+                        Continuously taunts surrounding opponents, attracting them to attack it.<br>
+                        Endurance scales based on Ganyu's Max HP.<br>
+                        Blooms profusely when destroyed or once its duration ends, dealing AoE Cryo DMG.
+                    </p>
+                </div>
+
+
+    
+                <div class="abilities-col">
+                    <h3>Celestial Shower</h3>
+                    <img src = "images/about/abi3.png">
+                    <p>
+                        Coalesces atmospheric frost and snow to summon a Sacred Cryo Pearl that exorcises evil.<br>
+                        During its ability duration, the Sacred Cryo Pearl will continuously rain down shards of ice, striking opponents within an AoE and dealing Cryo DMG.
+                    </p>
+                </div>
+            </div>
+        </section>
 
         <!-------------------------------------------FOOTER------------------------------------------------------------------------->
 
