--- a/about.html
+++ b/about.html
@@ -162,6 +162,55 @@
             </div>
         </section>
 
+        <section class ="abilities">
+            <h1>Talents</h1>
+            <div class = "row">
+                <div class="abilities-col">
+                    <h3>Undivided Heart</h3>
+                    <img src = "images/about/talent1.png">
+                    <p>
+                        <h5>Talent Type: 1st Ascension Passive
+                            <br><br>
+                            Category: Passive
+                        </h5>
+                    </p>
+                    <p>
+                        After firing a Frostflake Arrow, the CRIT Rate of subsequent Frostflake Arrows and their resulting bloom effects is increased by 20% for 5s. 
+                    </p>
+                </div>
+
+
+                <div class="abilities-col">
+                    <h3>Preserved for the Hunt</h3>
+                    <img src = "images/about/talent2.png">
+                    <p>
+                        <h5>Talent Type: Utility Passive
+                            <br><br>
+                            Category: Passive
+                        </h5>
+                    </p>
+                    <p>
+                        Refunds 15% of the ores used when crafting Bow-type weapons. 
+                    </p>
+                </div>
+
+    
+                <div class="abilities-col">
+                    <h4>Harmony Between Heaven and Earth</h4>
+                    <img src = "images/about/talent3.png">
+                    <p>
+                        <h5>Talent Type: 4th Ascension Passive
+                            <br><br>
+                            Category: Passive
+                        </h5>
+                    </p>
+                    <p>
+                        Celestial Shower grants a 20% Cryo DMG Bonus to active members in the AoE. 
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <!-------------------------------------------FOOTER------------------------------------------------------------------------->
 
         <section class="footer">
