--- a/about.html
+++ b/about.html
@@ -211,6 +211,67 @@
             </div>
         </section>
 
+        <section class="constellation">
+            <h1>Constellations</h1>
+
+            <div class="row-2">
+                <div class="constellation-col">
+                    <img src = "images/about/c1.png">
+                    <div>
+                        <p>Taking DMG from a Charge Level 2 Frostflake Arrow or Frostflake Arrow Bloom decreases opponents' Cryo RES by 15% for 6s.<br>
+                            A hit regenerates 2 Energy for Ganyu. This effect can only occur once per Charge Level 2 Frostflake Arrow, regardless if Frostflake Arrow itself or its Bloom hit the target.</p>
+                        <h3>C1: Dew-Drinker</h3>
+                    </div>>
+                </div>
+                <div class="constellation-col">
+                    <img src = "images/about/c2.png">
+                    <div>
+                        <p>Trail of the Qilin gains 1 additional charge.</p>
+                        <h3>C2: The Auspicious</h3>
+                    </div>>
+                </div>
+                
+            </div>
+
+            <div class="row-2">
+                <div class="constellation-col">
+                    <img src = "images/about/c3.png">
+                    <div>
+                        <p>Increases the Level of Celestial Shower by 3.<br>
+                            Maximum upgrade level is 15.</p>
+                        <h3>C3: Cloud-Strider</h3>
+                    </div>>
+                </div>
+                <div class="quotes-col">
+                    <img src = "images/about/c4.png">
+                    <div>
+                        <p>Opponents standing within the AoE of Celestial Shower take increased DMG. This effect strengthens over time.<br>
+                            Increased DMG taken begins at 5% and increases by 5% every 3s, up to a maximum of 25%.<br>
+                            The effect lingers for 3s after the opponent leaves the AoE.</p>
+                        <h3>C4: Westward Sojourn</h3>
+                    </div>>
+                </div>
+            </div>
+
+            <div class="row-2">
+                <div class="constellation-col">
+                    <img src = "images/about/c5.png">
+                    <div>
+                        <p>Increases the Level of Trail of the Qilin by 3.<br>
+                            Maximum upgrade level is 15.</p>
+                        <h3>C5: The Merciful</h3>
+                    </div>>
+                </div>
+                <div class="constellation-col">
+                    <img src = "images/about/c6.png">
+                    <div>
+                        <p>Using Trail of the Qilin causes the next Frostflake Arrow shot within 30s to not require charging.</p>
+                        <h3>C6: The Clement</h3>
+                    </div>>
+                </div>
+            </div>
+        </section>
+
         <!-------------------------------------------FOOTER------------------------------------------------------------------------->
 
         <section class="footer">
